2001-09-30  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* 00readme.w32.jis: Add information on mhc2ol.

	* 00usage.jis: Ditto.

	* configure.rb: Add an entry of mhc2ol.

	* make.rb.in: Ditto.

	* mhc2ol.in: New file.

2001-09-13  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc.el (toplevel): Require 'cl at compile time;
	Require 'poe and 'pcustom on Mule 2.3.

	* emacs/mhc-parse.el (mhc-parse/internal-parser): Use `format' to
	get rid of text property on header field name string.

	* emacs/mhc-calendar.el (mhc-calendar/tp-any): Define using
	defsubst instead of defalias.

2001-09-13  Toshihiko SHIMOKAWA  <toshi@tea.forus.or.jp>

	* mhc2palm.in: modify progress message.

2001-09-12  Yoshinari Nomura  <nom@quickhack.net>

	* ruby-ext/lib/mhc-palm.rb (PilotApptRecord#to_xsc):
	create X-SC-Location from a string srounded by '[' and ']' in
	Palm's description field.
        
	* ruby-ext/lib/mhc-schedule.rb (MhcScheduleItem#to_palm):
	Append the value of X-SC-Location enclosing by '[' and ']'
	to Palm's description field.
	
2001-08-07  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew-draft-translate): Catch the error for
	the illegal headers.

2001-07-16  Yoshinari NOMURA  <nom@quickhack.net>

	* emacs/mhc-guess.el (mhc-guess-time-regexp-list):
	change a hankaku colon (typo) to the zenkaku one.
        Thanks to Mr. KOIE Hidetaka.
	
2001-06-25  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-guess.el: clever mhc-guess-time-regexp.

2001-06-20  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-wl.el (mhc-wl-highlight-message): Follow the changes
	in Wanderlust 2.6.x and 2.7.x.
	(mhc-wl-insert-summary-contents): Ditto.
	(mhc-wl-summary-mode-setup): Ditto.
	(mhc-wl-summary-next-message): New function.

2001-06-15  Hideyuki SHIRAI  <shirai@quickhack.net>

	* samples/DOT.schedule.sample.jp: Fix 'UMI-NO-HI', 'KEIROU-NO-HI'
	and 'FURIKAE-KYUJITSU' to be accompanied by 'Happy Monday low'.
