@@ -1,3 +1,9 @@
+2001-10-01  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>
+
+	* emacs/make.rb.in: Validate options those are set with opt.
+	Correct MUA options.
+	Substitute the current directory for PWD on Windows.
+
 2001-09-30  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>
 
 	* 00readme.w32.jis: Add information on mhc2ol.
